syntax = "proto3";
package get;

service Tikv {
    rpc RawGet(RawGetRequest) returns (RawGetResponse) {}
    rpc BatchCommands(stream BatchCommandsRequest) returns (stream BatchCommandsResponse) {}
}

message BatchCommandsRequest {
    repeated Request requests = 1;
    repeated uint64 request_ids = 2;
    
    message Request {
        oneof cmd {
            RawGetRequest RawGet = 13;
        }
    }
}

message BatchCommandsResponse {
    repeated Response responses = 1;
    repeated uint64 request_ids = 2;

    message Response {
        oneof cmd {
            RawGetResponse RawGet = 13;
        }
    }
}

message RawGetRequest {
    Context context = 1;
    bytes key = 2;
    string cf = 3;
}

message RawGetResponse {
    Error region_error = 1;
    string error = 2;
    bytes value = 3;
}

message Context {
    reserved 4;
    reserved "read_quorum";
    uint64 region_id = 1;
    RegionEpoch region_epoch = 2;
    Peer peer = 3;
    uint64 term = 5;
    CommandPri priority = 6;
    IsolationLevel isolation_level = 7;
    bool not_fill_cache = 8;
    bool sync_log = 9;
    bool handle_time = 10;
    bool scan_detail = 11;
}

message RegionEpoch {
    uint64 conf_ver = 1;
    uint64 version = 2;
}

message Peer {      
    uint64 id = 1;
    uint64 store_id = 2;
    bool is_learner = 3;
}

enum CommandPri {
    Normal = 0;
    Low = 1;
    High = 2;
}

enum IsolationLevel {
    SI = 0;
    RC = 1;
}

message Error {
    reserved "stale_epoch";

    string message = 1;
    NotLeader not_leader = 2;
}

message NotLeader {
    uint64 region_id = 1;
    Peer leader = 2;
}
